TestCases/Errors/threaded_movement/run.bat
..\..\..\spm -r -q -g 0 -d > run.log
